tests/ui/methods/issue-3707.stderr
error[E0599]: no method named `boom` found for reference `&Obj` in the current scope
  --> $DIR/issue-3707.rs:10:14
   |
LL |         self.boom();
   |         -----^^^^--
   |         |    |
   |         |    this is an associated function, not a method
   |         help: use associated function syntax instead: `Obj::boom()`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: the candidate is defined in an impl for the type `Obj`
  --> $DIR/issue-3707.rs:6:5
   |
LL |     pub fn boom() -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
